# magik_pdf

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  poppler_interface.rs
