[package]
name = "magik_pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.14"
zip = "0.6"
zip-extensions = "0.6"
# rand = "0.8.5"
glob = "0.3.1"
anyhow = "1.0.80"